--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@achrinza/node-ipc": "^10.1.11",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "yarn": "^1.22.21"
